@@ -1,3 +1,10 @@
+Fri Apr  4 22:37:39 2003  Joern Thyssen  <jth@gnubg.org>
+
+	Fix number of chequers off for hypergammon.
+
+	* drawboard.c (DrawBoard), gtkboard.c (game_set): new parameter:
+	number of chequers. Changed all callers.
+
 Fri Apr  4 22:10:04 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* play.c (SetMatchID): bug fix: handle resignations
